Fix stupid random crash with loading DaapCollection.

The crash wasn't actually caused by the collection itself, but rather
by a warning dialog that PluginManager showed. Thanks to processEvents()
greatness, other things ran concurrently while it should have blocked.

BUG: 210363